# boringbay

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: contributors.yml  cross-compile.yml  docker-build-push.yml  main.yml
migrations/2021-11-30-135120_create_membership_table/: down.sql  up.sql
migrations/2021-11-30-135749_create_statistics_table/: down.sql  up.sql
migrations/2021-11-30-135749_create_trending_table/: down.sql  up.sql
migrations/2022-02-10-024102_statistics_v2/: down.sql  up.sql
migrations/2023-12-28-131316_statistics_v3/: down.sql  up.sql
migrations/2023-12-28-150535_statistics_v4/: down.sql  up.sql
resource/: membership.json
resources/: membership.json
src/: app_error.rs  app_model.rs  app_router.rs  boring_face.rs  lib.rs  main.rs  membership_model.rs  schema.rs  statistics_model.rs
templates/: base.html  index.html  join_us.html  rank.html
资源/: membership.json
